[gd_scene load_steps=5 format=3 uid="uid://dmctleo7i03mh"]

[ext_resource type="Script" path="res://scripts/UI/Global/Resource.gd" id="1_naqx1"]
[ext_resource type="PackedScene" uid="uid://bt82ve604ccni" path="res://scenes/UI/Global/tooltip_shower.tscn" id="2_4ootm"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_mwdsf"]
color = Color(0.192157, 0.192157, 0.192157, 1)
thickness = 2

[sub_resource type="StyleBoxLine" id="StyleBoxLine_g73sm"]
color = Color(0.576471, 0.576471, 0.576471, 1)
thickness = 2

[node name="Resource" type="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
offset_left = 70.0
offset_right = 220.0
offset_bottom = 31.0
size_flags_vertical = 3
theme_override_constants/separation = -4
script = ExtResource("1_naqx1")

[node name="NameAmountContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ResourceNameLabel" type="Label" parent="NameAmountContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Wood"

[node name="ResourceAmountLabel" type="Label" parent="NameAmountContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "1k"
horizontal_alignment = 2

[node name="DeltaMaxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="DeltaLabel" type="Label" parent="DeltaMaxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "+5/s"

[node name="CapacityLabel" type="Label" parent="DeltaMaxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 10
text = "/10k"

[node name="AmountProgress" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxLine_mwdsf")
theme_override_styles/fill = SubResource("StyleBoxLine_g73sm")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="TooltipShower" parent="Control" instance=ExtResource("2_4ootm")]
layout_mode = 2
offset_left = 4.0
offset_right = 245.0
offset_bottom = 16.0
anchor = 2

[connection signal="mouse_entered" from="NameAmountContainer" to="Control/TooltipShower" method="_on_show_tooltip"]
[connection signal="mouse_exited" from="NameAmountContainer" to="Control/TooltipShower" method="_on_hide_tooltip"]
